페이징 헬퍼

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -12,6 +12,7 @@
 </head>
 <div layout:fragment="content">
     <h1 class="my-4">게시판 리스트</h1>
+<!--    <p th:text="${boards}"></p>-->
     <!-- 🍉게시글 좋아요 ajax -->
     <script src="/public/js/BoardLike.js" defer></script>
 <!--    <p th:text="${boards}"></p>--> <!-- 게시글 불러와지는지 체크 (컨트롤러에서 boards 객체를 보냄)-->
