--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -30,15 +30,15 @@
             <li class="page-item">
                 <a class="page-link"
                    th:classappend="${!page.prev ? 'disabled':''}"
-                   th:href="@{''(page=${page}, order=${page.order}, direct=${page.direct}, searchField=${page.searchField})}">
+                   th:href="@{''(page=1, order=${page.order}, direct=${page.direct}, searchValue=${page.searchValue}, searchField=${page.searchField})}">
                     First
                 </a>
             </li>
-
+            <!-- searchField : 제목,내용,.. -->
             <li class="page-item">
                 <a class="page-link"
                    th:classappend="${!page.prev ? 'disabled':''}"
-                   th:href="@{''(page=${page.prevPage}, order=${page.order}, direct=${page.direct}, searchField=${page.searchField})}">
+                   th:href="@{''(page=${page.prevPage}, order=${page.order}, direct=${page.direct}, searchValue=${page.searchValue}, searchField=${page.searchField})}">
                     Prev
                 </a>
             </li>
@@ -46,7 +46,7 @@
             <li class="page-item" th:each="p : ${#numbers.sequence(1,page.lastPage)}">
                 <a class="page-link"
                    th:classappend="${(p==page.page)?'active':''}"
-                   th:href="@{''(page=${p}, order=${page.order}, direct=${page.direct}, searchField=${page.searchField})}" th:text="${p}"></a>
+                   th:href="@{''(page=${p}, order=${page.order}, direct=${page.direct}, searchValue=${page.searchValue}, searchField=${page.searchField})}" th:text="${p}"></a>
             </li>
 <!--            <li class="page-item"><a class="page-link" href="?page=2">2</a></li>-->
 <!--            <li class="page-item"><a class="page-link" href="?page=3">3</a></li>-->
@@ -56,7 +56,7 @@
             <li class="page-item">
                 <a class="page-link"
                    th:classappend="${!page.next ? 'disabled':''}"
-                   th:href="@{''(page=${page.nextPage}, order=${page.order}, direct=${page.direct}, searchField=${page.searchField})}">
+                   th:href="@{''(page=${page.nextPage}, order=${page.order}, direct=${page.direct}, searchValue=${page.searchValue}, searchField=${page.searchField})}">
                     Next
                 </a>
             </li>
@@ -64,7 +64,7 @@
             <li class="page-item">
                 <a class="page-link"
                    th:classappend="${!page.next ? 'disabled':''}"
-                   th:href="@{''(page=${page.lastPage}, order=${page.order}, direct=${page.direct}, searchField=${page.searchField})}">
+                   th:href="@{''(page=${page.lastPage}, order=${page.order}, direct=${page.direct}, searchValue=${page.searchValue}, searchField=${page.searchField})}">
                     Last
                 </a>
             </li>
